# AoC

2021/0/: part1.py  part2.py
2021/1/: part1.py  part2.py
2021/10/: part1.py  part2.py
2021/11/: part1.py  part2.py
2021/12/: part1.py  part2.py
2021/13/: part1.py  part2.py
2021/14/: part1.py  part2.py
2021/15/: part1.py  part2.py
2021/2/: part1.py  part2.py
2021/3/: part1.py  part2.py
2021/4/: part1.py  part2.py
2021/5/: part1.py  part2.py
2021/6/: part1.py  part2.py
2021/7/: part1.py  part2.py
2021/8/: part1.py  part2.py
2021/9/: part1.py  part2.py
2022/: .gitignore
2022/0/: part1.py  part2.py
2022/c++/: .gitignore  CMakeLists.txt
2022/c++/include/: solution.hpp
2022/c++/src/0_template/: solution.cpp
2022/c++/src/1/: solution.cpp
2022/c++/src/12/: solution.cpp
2022/c++/src/4/: solution.cpp
2022/c++/src/6/: solution.cpp
2022/c++/test/: test.hpp
2022/python/0/: part2.py
2022/python/1/: part1.py  part2.py
2022/python/10/: part1.py  part2.py
2022/python/11/: monkey.py  part1.py  part2.py
2022/python/13/: packet_comparison.py  part1.py  part2.py
2022/python/14/: grid.py  part1.py  part2.py
2022/python/15/: common.py  part1.py  part2.py
2022/python/16/: part1.py
2022/python/18/: grid.py  part1.py  part2.py
2022/python/2/: part1.py  part2.py
2022/python/20/: node.py  part1.py  part2.py
2022/python/21/: part1.py  part2.py
2022/python/23/: move_elves.py  part1.py  part2.py
2022/python/25/: part1.py
2022/python/3/: part1.py  part2.py
2022/python/4/: part1.py  part2.py
2022/rust/: Cargo.toml
(+14 files in other folders)
